welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (getX()==6 && getY()==6){
        ^SnakeBuggle:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return false
  ^